# lughos

./: .gitignore  CMakeLists.txt  Doxyfile  TODO  doxygen.conf  lughos.kdev4
.kdev4/: lughos.kdev4
cmake/modules/: FindDoxygen.cmake  FindLibharu.cmake
cmake/toolchains/: Toolchain-cross-mingw64-linux.cmake
dependencies/: CMakeLists.txt  README.md  boost.patch  msgpack.patch  wt.patch
externalLibraries/src/libharu-stamp/: libharu-gitinfo.txt
externalLibraries/src/wt-build/: CMakeCache.txt  Makefile  WtInstall.cmake  cmake_install.cmake
externalLibraries/src/wt-build/Wt/: WConfig.h
externalLibraries/src/wt-build/examples/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/blog/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/charts/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/codeview/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/composer/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/dialog/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/dragdrop/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/auth1/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/auth2/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/broadcast/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/client-ssl-auth/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/dbo/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/locale/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/mediaplayer/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/miniwebgl/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/multiple_servers/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/oauth/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/paypal/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/serverpush/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/socketnotifier/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/suggestionpopup/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/template-fun/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/feature/video/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/filetreetable/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/form/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/gitmodel/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/hangman/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/hello/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/javascript/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/mandelbrot/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/mission/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/onethread/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/painting/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/planner/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/qrlogin/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/simplechat/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/style/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/treelist/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/treeview/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/treeview-dragdrop/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/webgl/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/wt-homepage/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/examples/wtwithqt/: Makefile  cmake_install.cmake  moccedQtObject.C_parameters
externalLibraries/src/wt-build/src/: AuthCssTheme_xml.C  AuthStrings_xml.C  Boot_html.C  Boot_js.C  Bootstrap3Theme_xml.C  BootstrapTheme_xml.C  Hybrid_html.C  JQuery_js.C  Makefile  Plain_html.C  Wt_js.C  Wt_xml.C  cmake_install.cmake
externalLibraries/src/wt-build/src/Wt/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/src/Wt/Auth/: Makefile  (+1 more)
externalLibraries/src/wt-build/src/fcgi/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/src/http/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/src/isapi/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/src/web/: Makefile  cmake_install.cmake
externalLibraries/src/wt-build/test/: Makefile  cmake_install.cmake
externalLibraries/src/wt-stamp/: wt-gitclone-lastrun.txt
externalLibraries/tmp/: libharu-cfgcmd.txt  libharu-gitclone.cmake  libharu-gitupdate.cmake  wt-cfgcmd.txt  wt-gitclone.cmake  wt-gitupdate.cmake
resources/: lughos.css
src/: .directory  .test_serial.cpp.kate-swp  BasicObject.hpp  BasicParsers.hpp  CMakeLists.txt  DataAcquisition.hpp  DeviceUI.hpp  DeviceUI_FUG.hpp  DeviceUI_PSA.hpp  DeviceUI_RFG.hpp  DeviceUI_Relais.hpp  DeviceUI_bronkhorst..hpp  DeviceUI_bronkhorst.hpp  DeviceUI_bronkhorst_backup.hpp  Dict.cpp  Dict.hpp  FUGNetzteil.cpp  FUGNetzteil.hpp  MaxiGauge.cpp  MaxiGauge.hpp  PSANetzteil.cpp  PSANetzteil.hpp  PSAPowersupply.cpp  PSAPowersupply.hpp  RFG.cpp  RFG.hpp  RFG_calibrator.cpp  Relais.cpp  Relais.hpp  ScatterPlot.hpp  ScatterPlot_bronkhorst.hpp  ScatterPlot_dummy.hpp  StatusLEDWtWidget.hpp  WtSession.cpp  WtSession.hpp  WtUser.cpp  WtUser.hpp  asioConnections.cpp  asioConnections.hpp  basicConnections.cpp  (+101 more)
(+29 files in other folders)
